--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   },
   "dependencies": {
     "vue": "^2.6.11",
+    "vue-gallery-slideshow": "^1.5.2",
     "vue-router": "^3.2.0",
     "vuex": "^3.4.0"
   },
