--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "build": "vue-cli-service build"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-free": "^5.15.1",
     "vue": "^2.6.11",
     "vue-gallery-slideshow": "^1.5.2",
     "vue-router": "^3.2.0",
